tests/negative/test_block_non_eval_eval_exit.orb
fnc main () () {
    block {
        eval (exit true);
    };
};